Bring back uml doclet. Adjust find operation in rsta. Other misc changes.